# deploys

./: README.md
FreeYOLO-onnxruntime-cpp/: CMakeLists.txt  main.cpp  run.sh
